<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>im10a_driver</name>
  <version>1.0.0</version>
  <description>ROS2 driver for the Hiwonder IM10A 10-axis IMU (WitMotion 0x55 protocol). Publishes sensor_msgs/Imu on /imu/data.</description>
  <maintainer email="dev@example.com">Anirudha Talmale</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
