<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_gnss_adapter</name>
  <version>1.0.0</version>
  <description>Bridges the Hiwonder IM10A IMU (vendor ROS2 driver) into /gnss_inertial/imu, with optional UM982 dual-antenna heading fusion for absolute yaw.</description>
  <maintainer email="dev@example.com">Anirudha Talmale</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
